the first commit : start clothes project

--- a/index.html
+++ b/index.html
@@ -5,12 +5,202 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/main.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+        crossorigin="anonymous" />
     <title>Document</title>
 </head>
 
 <body>
-    <h1>MohammadPiramun</h1>
-    <h2>this my new git test </h2>
+    <div class="Container">
+        <header class="header">
+            <div class="logo">
+                <a href="#"><img src="./Images/Totoro_Stickers-removebg-preview.png" alt="some logo"
+                        class="logo_img"></a>
+            </div>
+            <nav class=first_nav>
+                <ul class="first_nav_list">
+                    <li class="first_nav_list_item">
+                        <a href="#" class="basket_link">
+                            <i class="fas fa-shopping-cart"></i> (0)</a>
+                    </li>
+                    <li class="first_nav_list_item">
+                        <a href="#" class="Search_link">
+                            <i class="fas fa-search"></i>Search</a>
+                    </li>
+                    <li class="first_nav_list_item">
+                        <a href="#" class="contact_link"> ContactUs</a>
+                    </li>
+                    <li class="first_nav_list_item">
+                        <a href="#" class="sing_link"><i class="fas fa-user"></i> SingIn</a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="heading">
+                <h1 class="heading_text">
+                    SabiClothes
+                </h1>
+                <nav class="second_nav">
+                    <ul class="second_nav_list">
+                        <li class="second_nav_list_item">
+                            <a href="#" class="second_nav_link">
+                                Shop
+                            </a>
+                        </li>
+                        <li class="second_nav_list_item Gift">
+                            <a href="#" class="second_nav_link ">
+                                GiftIdeas<i class="fas fa-sort-down"></i>
+                                <ul class="second_nav_underlist">
+                                    <li class="underlist_item">
+                                        <a href="#" class="underlist_link">link1</a>
+                                    </li>
+                                    <li class="underlist_item">
+                                        <a href="#" class="underlist_link">link2</a>
+                                    </li>
+                                    <li class="underlist_item">
+                                        <a href="#" class="underlist_link">link3</a>
+                                    </li>
+                                </ul>
+                            </a>
+                        </li>
+                        <li class="second_nav_list_item">
+                            <a href="#" class="second_nav_link">
+                                AboutUs
+                            </a>
+                        </li>
+                        <li class="second_nav_list_item">
+                            <a href="#" class="second_nav_link">
+                                OurTeam
+                            </a>
+                        </li>
+                        <li class="second_nav_list_item">
+                            <a href="#" class="second_nav_link">
+                                News
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+        <!-------------------Start SlideShow------------------------------->
+        <section class="slideshow">
+            <div class="slideshow_slide">
+                <img src="./Images/img1.jpg" alt="sorry some image is not loaded !!">
+                <div class="slideshow_content">
+                    <h1>slideImage1</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi quod eos laboriosam suscipit
+                        consectetur reprehenderit molestias modi ipsum pariatur sequi veritatis nobis, incidunt eligendi
+                        et? Ad consequuntur nobis tempore laboriosam.</p>
+                </div>
+
+            </div>
+
+            <div class="slideshow_slide">
+                <img src="./Images/img2.jpg" alt="sorry some image is not loaded !!">
+                <div class="slideshow_content">
+                    <h1>slideImage2</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi quod eos laboriosam suscipit
+                        consectetur reprehenderit molestias modi ipsum pariatur sequi veritatis nobis, incidunt eligendi
+                        et? Ad consequuntur nobis tempore laboriosam.</p>
+                </div>
+
+            </div>
+            <div class="slideshow_slide">
+                <img src="./Images/img3.jpg" alt="sorry some image is not loaded !!">
+                <div class="slideshow_content">
+                    <h1>slideImage3</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi quod eos laboriosam suscipit
+                        consectetur reprehenderit molestias modi ipsum pariatur sequi veritatis nobis, incidunt eligendi
+                        et? Ad consequuntur nobis tempore laboriosam.</p>
+                </div>
+
+            </div>
+            <div class="slideshow_slide">
+                <img src="./Images/img4.jpg" alt="sorry some image is not loaded !!">
+                <div class="slideshow_content">
+                    <h1>slideImage4</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi quod eos laboriosam suscipit
+                        consectetur reprehenderit molestias modi ipsum pariatur sequi veritatis nobis, incidunt eligendi
+                        et? Ad consequuntur nobis tempore laboriosam.</p>
+                </div>
+
+            </div>
+            <div class="slideshow_slide">
+                <img src="./Images/img5.jpg" alt="sorry some image is not loaded !!">
+                <div class="slideshow_content">
+                    <h1>slideImage5</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi quod eos laboriosam suscipit
+                        consectetur reprehenderit molestias modi ipsum pariatur sequi veritatis nobis, incidunt eligendi
+                        et? Ad consequuntur nobis tempore laboriosam.</p>
+                </div>
+
+            </div>
+
+
+    </div>
+    </div>
+    </section>
+    <!-------------------End SlideShow------------------------------->
+    <!--Section Products Start-->
+    <section class="Products">
+        <div class="Products_heading">
+            <h1>Featured Products</h1>
+        </div>
+        <div class="Products_Wrapper">
+            <div class="Products_Items">
+                <img src="./Images/product1.png" alt="" class="Products_Items_image">
+                <div class="Products_Items_text">
+                    <h1 class="Product_Name">
+                        Dress
+                    </h1>
+                    <h2 class="Product_Price">
+                        price : <span>$200</span>
+                    </h2>
+                    <a href="#" class="Btn_Buy">Buy Now</a>
+                </div>
+            </div>
+            <div class="Products_Items">
+                <img src="./Images/product2.png" alt="" class="Products_Items_image">
+                <div class="Products_Items_text">
+                    <h1 class="Product_Name">
+                        Pants
+                    </h1>
+                    <h2 class="Product_Price">
+                        price : <span>$200</span>
+                    </h2>
+
+                    <a href="#" class="Btn_Buy">Buy Now</a>
+
+                </div>
+            </div>
+            <div class="Products_Items">
+                <img src="./Images/product3.png" alt="" class="Products_Items_image">
+                <div class="Products_Items_text">
+                    <h1 class="Product_Name">
+                        Shirt
+                    </h1>
+                    <h2 class="Product_Price">
+                        price : <span>$200</span>
+                    </h2>
+                    <a href="#" class="Btn_Buy">Buy Now</a>
+                </div>
+            </div>
+        </div>
+        <div class="Btn_SeeMore">
+            <div class="Btn_SeeMore_text">
+                <a href="#">see more
+                    <div class="Btn_SeeMore_overlayer">
+                        <p></p>
+                    </div>
+                </a>
+
+            </div>
+
+        </div>
+    </section>
+    <!--End Products Section-->
+    </div>
 </body>
 
 </html>
