change fontFamily and get margin for icons

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
         integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
         crossorigin="anonymous" />
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Pattaya&display=swap" rel="stylesheet">
+    <title>Sabi Fashion</title>
 </head>
 
 <body>
@@ -39,7 +41,7 @@
             </nav>
             <div class="heading">
                 <h1 class="heading_text">
-                    SabiClothes
+                    Sabi Clothes
                 </h1>
                 <nav class="second_nav">
                     <ul class="second_nav_list">
