some footer and make Responsive and i hope is works !!!

--- a/index.html
+++ b/index.html
@@ -138,70 +138,111 @@
                 </div>
 
             </div>
-
-
-    </div>
-    </div>
-    </section>
-    <!-------------------End SlideShow------------------------------->
-    <!--Section Products Start-->
-    <section class="Products">
-        <div class="Products_heading">
-            <h1>Featured Products</h1>
-        </div>
-        <div class="Products_Wrapper">
-            <div class="Products_Items">
-                <img src="./Images/product1.png" alt="" class="Products_Items_image">
-                <div class="Products_Items_text">
-                    <h1 class="Product_Name">
-                        Dress
-                    </h1>
-                    <h2 class="Product_Price">
-                        price : <span>$200</span>
-                    </h2>
-                    <a href="#" class="Btn_Buy">Buy Now</a>
-                </div>
+        </section>
+        <!-------------------End SlideShow------------------------------->
+        <!--Section Products Start-->
+        <section class="Products">
+            <div class="Products_heading">
+                <h1>Featured Products</h1>
             </div>
-            <div class="Products_Items">
-                <img src="./Images/product2.png" alt="" class="Products_Items_image">
-                <div class="Products_Items_text">
-                    <h1 class="Product_Name">
-                        Pants
-                    </h1>
-                    <h2 class="Product_Price">
-                        price : <span>$200</span>
-                    </h2>
-
-                    <a href="#" class="Btn_Buy">Buy Now</a>
-
-                </div>
-            </div>
-            <div class="Products_Items">
-                <img src="./Images/product3.png" alt="" class="Products_Items_image">
-                <div class="Products_Items_text">
-                    <h1 class="Product_Name">
-                        Shirt
-                    </h1>
-                    <h2 class="Product_Price">
-                        price : <span>$200</span>
-                    </h2>
-                    <a href="#" class="Btn_Buy">Buy Now</a>
-                </div>
-            </div>
-        </div>
-        <div class="Btn_SeeMore">
-            <div class="Btn_SeeMore_text">
-                <a href="#">see more
-                    <div class="Btn_SeeMore_overlayer">
-                        <p></p>
+            <div class="Products_Wrapper">
+                <div class="Products_Items">
+                    <img src="./Images/product1.png" alt="" class="Products_Items_image">
+                    <div class="Products_Items_text">
+                        <h1 class="Product_Name">
+                            Dress
+                        </h1>
+                        <h2 class="Product_Price">
+                            price : <span>$200</span>
+                        </h2>
+                        <a href="#" class="Btn_Buy">Buy Now</a>
                     </div>
-                </a>
+                </div>
+                <div class="Products_Items">
+                    <img src="./Images/product2.png" alt="" class="Products_Items_image">
+                    <div class="Products_Items_text">
+                        <h1 class="Product_Name">
+                            Pants
+                        </h1>
+                        <h2 class="Product_Price">
+                            price : <span>$200</span>
+                        </h2>
+
+                        <a href="#" class="Btn_Buy">Buy Now</a>
+
+                    </div>
+                </div>
+                <div class="Products_Items">
+                    <img src="./Images/product3.png" alt="" class="Products_Items_image">
+                    <div class="Products_Items_text">
+                        <h1 class="Product_Name">
+                            Shirt
+                        </h1>
+                        <h2 class="Product_Price">
+                            price : <span>$200</span>
+                        </h2>
+                        <a href="#" class="Btn_Buy">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="Btn_SeeMore">
+                <div class="Btn_SeeMore_text">
+                    <a href="#">see more
+                        <div class="Btn_SeeMore_overlayer">
+                            <p></p>
+                        </div>
+                    </a>
+
+                </div>
 
             </div>
-
-        </div>
-    </section>
-    <!--End Products Section-->
+        </section>
+        <!--End Products Section-->
+        <!--Start Footer Section-->
+        <section class="Footer">
+            <div class="Footer_MoreInfo">
+                <h1 class="heading">More Info</h1>
+                <ul class="Footer_MoreInfo_list">
+                    <li class="Footer_items"><a href="#" class="Footer_links">Company</a></li>
+                    <li class="Footer_items"><a href="#" class="Footer_links">Sales</a></li>
+                    <li class="Footer_items"><a href="#" class="Footer_links">Returns</a></li>
+                    <li class="Footer_items"><a href="#" class="Footer_links">Privacy Policy</a></li>
+                    <li class="Footer_items"><a href="#" class="Footer_links">Contact Us</a></li>
+                </ul>
+            </div>
+            <div class="Footer_SingUp">
+                <div class="Footer_SingUp_text">
+                    <h1 class="Footer_SingUp_text_heading">
+                        Sing Up for our Newspaper
+                    </h1>
+                    <p class="Footer_SingUp_text_content">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <form action="" method="post" class="Footer_SingUp_Form">
+                    <div class="name_grop">
+                        <input type="text" class="F_name" placeholder="Your FirstName">
+                        <input type="text" class="L_name" placeholder="Your lastName">
+                    </div>
+                    <div class="sendEmail_grop">
+                        <input type="email" class="Email" placeholder="Your Email .....">
+                        <button class="btn_submit" type="submit">Sing Up</button>
+                    </div>
+                </form>
+            </div>
+            <div class="Footer_Store_address">
+                <h1 class="heading">
+                    Clothes Store
+                </h1>
+                <ul class="Footer_Store_address_list">
+                    <li class="Footer_items"><a href="#" class="Footer_links">555 666 111
+                            222</a></li>
+                    <li class="Footer_items"><a href="#" class="Footer_links">info@gmail.com</a></li>
+                    <li class="Footer_items"><a href="#" class="Footer_links">Address</a>
+                    </li>
+                    <li class="Footer_items"><a href="#" class="Footer_links">FreeShiping</a></li>
+                </ul>
+            </div>
+        </section>
+        <!--End Footer Section-->
     </div>
 </body>
 
